k8s_yaml_file/tomcat-deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: testing
  labels:
    env: testing
