k8s_yaml_file/tomcat-deploy/tomcat-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-deploy
  namespace: testing
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
         app: tomcat
    spec:
      containers:
      - name: tomcat
        image: gdsz.harbor.com/library/tomcat8-java8:latest
        ports:
          - containerPort: 8080
            name: httpport
          - containerPort: 8009
            name: ajpport
