k8s_yaml_file/tomcat-deploy/tomcat-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-svc
  namespace: testing
  labels:
    app: tomcat
spec:
  selector:
    app: tomcat
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
