k8s_yaml_file/tomcat-deploy/myapp-pod.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: testing
spec:
  selector:
    app: myapp
    release: canary
  ports:
  - name: http
    targetPort: 80
    port: 8090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deploy
  namespace: testing
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
      release: canary
  template:
    metadata:
      labels:
        app: myapp
        release: canary
    spec:
      containers:
      - name: myapp
        image: gdsz.harbor.com/library/myapp:v2
        ports:
        - name: http
          containerPort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-myapp
  namespace: testing
spec:
  rules:
  - host: myapp.along.com
    http:
      paths:
      - path:
        backend:
          serviceName: myapp
          servicePort: 8090
