k8s_yaml_file/tomcat-deploy/tomcat-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tomcat
  namespace: testing
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: tomcat.k8s.io
      http:
        paths:
          - path:
            backend:
              serviceName: tomcat-svc
              servicePort: 80
